# Dependency-Checker

./: README.md
dependency_checker_pkg/: README.md  dependency_cli.py  dependency_core.py  pyproject.toml
dependency_checker_pkg/data/: stdlib_3_10.json  stdlib_3_11.json  stdlib_3_12.json  stdlib_3_9.json
dependency_checker_pkg/tests/: test_dependency_cli.py
